--- a/trudi landing/index.css
+++ b/trudi landing/index.css
@@ -16,7 +16,12 @@ body {
     align-items: center;
 }
 
+.justify-content-center {
+    justify-content: center;
+}
+
 .block {
+    position: relative;
     flex: 1;
     width: 100%;
 }
@@ -116,6 +121,9 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border-radius: 20px;
+    width: 100%;
+    height: 100%;
 }
 .long-button-active {
     background-color: #1ECECA;
@@ -130,4 +138,110 @@ a {
 .long-button-inactive {
     background-color: #F3F4F8;
     color: rgba(32, 32, 32, 0.5);
+}
+
+.phone-wrapper {
+    overflow: hidden;
+    border-radius: 20px;
+    /*border: solid 10px green;*/
+    background-image: linear-gradient(rgba(0, 167, 157, 1), rgba(75, 225, 222, 1), rgba(255, 255, 255, 0.28));
+    -ms-transform: rotate(9deg); /* IE 9 */
+    transform: translate(-50%, -50%) rotate(9deg);
+}
+
+.section {
+    border-radius: 20px;
+    width: 100%;
+    height: 100%;
+}
+
+#section0 {
+    background: red;
+}
+
+#section1 {
+    background: yellow;
+}
+
+#section2 {
+    background: green;
+}
+
+#section3 {
+    background: blue;
+}
+
+.bubble {
+    position: absolute;
+    border-radius: 50%;
+}
+
+.size-36 {
+    width: 36px;
+    min-width: 36px;
+    height: 36px;
+    min-height: 36px;
+    background: rgba(119, 155, 228, 1);
+}
+
+.size-179 {
+    width: 179px;
+    min-width: 179px;
+    height: 179px;
+    min-height: 179px;
+    background: rgba(236, 250, 250, 1);
+    top: 25%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+}
+
+.size-690 {
+    width: 690px;
+    min-width: 690px;
+    height: 690px;
+    min-height: 690px;
+    background: rgba(236, 250, 250, 1);
+    top: 60%;
+    left: 33%;
+    transform: translate(-50%, -50%);
+}
+
+.size-131 {
+    width: 131px;
+    min-width: 131px;
+    height: 131px;
+    min-height: 131px;
+    background: rgba(107, 211, 209, 1);
+}
+
+.size-80 {
+    width: 80px;
+    min-width: 80px;
+    height: 80px;
+    min-height: 80px;
+    background: rgba(255, 213, 130, 1);
+}
+
+.size-45 {
+    width: 45px;
+    min-width: 45px;
+    height: 45px;
+    min-height: 45px;
+    background: rgba(255, 213, 130, 1);
+}
+
+.size-29 {
+    width: 29px;
+    min-width: 29px;
+    height: 29px;
+    min-height: 29px;
+    background: rgba(119, 155, 228, 1);
+}
+
+.size-58 {
+    width: 58px;
+    min-width: 58px;
+    height: 58px;
+    min-height: 58px;
+    background: rgba(119, 155, 228, 1);
 }
