--- a/trudi landing/index.css
+++ b/trudi landing/index.css
@@ -182,6 +182,9 @@ a {
     height: 36px;
     min-height: 36px;
     background: rgba(119, 155, 228, 1);
+    top: 25%;
+    left: 20%;
+    transform: translate(-50%, -50%);
 }
 
 .size-179 {
@@ -212,6 +215,11 @@ a {
     height: 131px;
     min-height: 131px;
     background: rgba(107, 211, 209, 1);
+    z-index: 1;
+    top: 50%;
+    left: 2%;
+    transform: translate(-50%, -50%);
+
 }
 
 .size-80 {
@@ -220,6 +228,10 @@ a {
     height: 80px;
     min-height: 80px;
     background: rgba(255, 213, 130, 1);
+    z-index: 1;
+    top: 50%;
+    left: 77%;
+    transform: translate(-50%, -50%);
 }
 
 .size-45 {
@@ -228,6 +240,10 @@ a {
     height: 45px;
     min-height: 45px;
     background: rgba(255, 213, 130, 1);
+    z-index: 1;
+    top: 65%;
+    left: 25%;
+    transform: translate(-50%, -50%);
 }
 
 .size-29 {
@@ -236,6 +252,10 @@ a {
     height: 29px;
     min-height: 29px;
     background: rgba(119, 155, 228, 1);
+    z-index: 1;
+    top: 82%;
+    left: 10%;
+    transform: translate(-50%, -50%);
 }
 
 .size-58 {
@@ -244,4 +264,8 @@ a {
     height: 58px;
     min-height: 58px;
     background: rgba(119, 155, 228, 1);
+    z-index: 1;
+    top: 74%;
+    left: 69%;
+    transform: translate(-50%, -50%);
 }
